syntax = "proto3";

package sisyphus.api.cel.test;

import "google/protobuf/struct.proto";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

option java_package = "com.bybutter.sisyphus.api.cel.test";

message ConditionalTest {
  bool condition = 1;
}
message NegateTest {
  uint64 value = 1;
}

message CellTest {
  uint64 left = 1;
  uint64 right = 2;
}

message HasMessageTest {
  int32 start_value = 1;
  map<string, HasMessage> message_map_value = 2;
  map<int32, bool> base_type_map_value = 3;
  int32 end_value = 4;
  map<string, google.protobuf.Any> any_map_value = 5;
  repeated google.protobuf.Any any_list_value = 6;
  HasMessage has_message_value = 7;
  google.protobuf.Value value = 8;
  google.protobuf.Value value_list = 9;
  google.protobuf.Value value_string = 10;
  google.protobuf.Value value_struct = 11;
  message HasMessage {
    int32 int32_value = 1;
  }
}

message PackedTest {
  repeated int32 values = 1;
}
